Finish first version testing.