@@ -16,13 +16,23 @@ Provide converter for the OpenNLP one-per-line format to LEDS.</description>
   <dependencies>
   	<dependency>
   		<groupId>org.apache.opennlp</groupId>
-  		<artifactId>opennlp</artifactId>
+  		<artifactId>opennlp-tools</artifactId>
   		<version>1.5.3</version>
   	</dependency>
   	<dependency>
+	  <groupId>org.apache.opennlp</groupId>
+	  <artifactId>opennlp-uima</artifactId>
+	  <version>1.5.3</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.opennlp</groupId>
+	  <artifactId>opennlp-maxent</artifactId>
+	  <version>3.0.3</version>
+	</dependency>
+  	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
-  		<version>3.8.1</version>
+  		<version>4.8.1</version>
   	</dependency>
 	<dependency>
   		<groupId>org.anc.lapps</groupId>
@@ -55,5 +65,57 @@ Provide converter for the OpenNLP one-per-line format to LEDS.</description>
 		<artifactId>jsf-impl</artifactId>
 		<version>2.1.7</version>
 	</dependency>
+   	<dependency>
+           <groupId>org.anc</groupId>
+           <artifactId>common</artifactId>
+           <version>3.1.1</version>
+    </dependency>
+    <dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+	</dependency>	
+	<dependency>
+		<groupId>org.apache.lucene</groupId>
+		<artifactId>lucene-wordnet</artifactId>
+		<version>3.3.0</version>
+	</dependency>
   </dependencies>
+
+	<build>
+		<finalName>opennlp-web-service</finalName>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+					<!-- mvn test: java.lang.OutOfMemoryError: Java heap space -->
+				</configuration>
+			</plugin> 
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.10</version>
+				<configuration>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<connectors>
+						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+							<port>4040</port>
+							<maxIdleTime>60000</maxIdleTime>
+						</connector>
+					</connectors>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
 </project>
